Added opions page where a root folder can be selected

--- a/options.html
+++ b/options.html
@@ -9,7 +9,8 @@
   </head>
   <body>
   <table>
-  <tr><td>Project Folder</td><td><input type="text" id="query_text"/></td><td><button id="folder_search">Search</button></td></tr>
+  <tr><td>Project Root Folder</td><td><div id='select'></div></td><td><button id="folder_search">Search</button></td></tr>
   </table>
+  
   </body>
 </html>
